--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
       
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
-      <input type="text" id="fullname" name="fullname" placeholder="Enter Name"><br><br>
+      <input type="text" id="fullname" name="fullname" placeholder="Enter Name" required=""><br><br>
 
       <!-- Add a label for 'email'-->
       <label for="email">Email:</label>
       
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
-      <input type="email" id="email" name="email" placeholder="Enter Email"><br><br>
+      <input type="email" id="email" name="email" placeholder="Enter Email" required=""><br><br>
 
       <!-- Add a label for 'phone'-->
       <label for="phone">Phone:</label>
