--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-      <input type="tel" id="phone" name="phone" placeholder="Enter Telephone (Optional)"><br><br>
+      <input type="tel" id="phone" name="phone" placeholder="Enter Telephone (optional)"><br><br>
 
       <!-- Add a label for 'message'-->
       <label for="message">Message:</label>
