Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
-      <textarea id="w3review" name="w3review" rows="4" cols="50">
+      <textarea id="message" name="w3review" rows="4" cols="50" placeholder="Enter Message">
         At w3schools.com you will learn how to make a website. They offer free tutorials in all web development technologies.
       </textarea>
 
